# labsync

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: build-push-ecr.yml  ci.yml
backend/appointment-service/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/appointment-service/alembic/: env.py
backend/appointment-service/alembic/versions/: 0001_initial_schema.py  0002_seed_lab_tests.py
backend/appointment-service/app/: auth.py  config.py  db.py  main.py  models.py  redis_client.py  schemas.py
backend/appointment-service/app/routers/: appointments.py  lab_tests.py  patients.py
backend/appointment-service/tests/: test_health.py
backend/notification-service/: Dockerfile  pyproject.toml  requirements.txt
backend/notification-service/app/: config.py  consumer.py  emailer.py  events.py  main.py
backend/notification-service/tests/: test_health.py
backend/report-service/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/report-service/app/: auth.py  bedrock.py  config.py  db.py  ingestion.py  main.py  s3.py  schemas.py  textract.py
backend/report-service/app/routers/: reports.py
backend/report-service/tests/: test_health.py
docs/: BLUEPRINT.md  FRONTEND_ANALYSIS.md  FRONTEND_VISION.md  IMPLEMENTATION.md  SCREEN_INVENTORY.md
frontend/: .env.example  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: BentoCard.tsx  PatientSidebar.tsx  ReportPreviewModal.tsx  StaffSidebar.tsx
frontend/src/hooks/: useLabTests.ts  useReports.ts
frontend/src/lib/: api.ts  auth.ts  (+1 more)
k8s/: root-app.yaml
k8s/applications/: appointment-service.yaml  notification-service.yaml  redis.yaml  report-service.yaml
k8s/platform-addons/: argocd.yaml  aws-load-balancer-controller.yaml  karpenter.yaml  secrets-store-csi-driver.yaml
serverless/ai-processing-pipeline/: pyproject.toml  requirements.txt  template.yaml
serverless/ai-processing-pipeline/events/: s3-put.json
serverless/ai-processing-pipeline/src/: bedrock.py  chunking.py  db.py  handler.py  textract_ocr.py
serverless/ai-processing-pipeline/tests/: test_chunking.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
(+62 files in other folders)
