[project]
name = "notification-service"
version = "0.1.0"
description = "LabLumen notification-service: SQS consumer loop + SES email."
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
