[project]
name = "report-service"
version = "0.1.0"
description = "LabLumen report-service: S3 presigned URLs + document-scoped RAG chat (boto3 + pgvector)."
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection pattern (Depends/Query/Security in defaults) is intentional.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
